# TermSnake

./: CMakeLists.txt  Makefile  README.md  curses_include.h  game.h  main.cpp  snake.h  termSnake
.github/workflows/: ccpp.yml
